fix: Corrected the overflow of words on the IndividualTask.

--- a/todoList/src/components/IndividualTask.module.css
+++ b/todoList/src/components/IndividualTask.module.css
@@ -7,6 +7,7 @@
   border: none;
   border-radius: 8px;
   padding: 1rem;
+  word-break: break-all;
 }
 
 .wrapperCheckAndLabel {
